# ArcadeApp

./: ArcadeApp.sln  ArcadeApp.vcxproj  ArcadeApp.vcxproj.filters  CMakeLists.txt
Main/: Main.vcxproj
Main/src/: Main.cpp
PracticeProblems/: PracticeProblems.vcxproj  PracticeProblems.vcxproj.filters
PracticeProblems/inc/: Problems.h
PracticeProblems/src/: Problems.cpp  main.cpp
RecordsForCLP/: 01042021_1430_Notes.txt  02262021_1449_Notes.txt  05042021_1436_Notes.txt  05122021_1430_Notes.txt  05272021_1450_Notes.txt  06112021_1515_Notes.txt  07212021_1500_Notes.txt  07222021_1500_Notes.txt  11242020_1452__Notes.txt  12032020_1445__Notes.txt  12032020_1800_Notes.txt
inc/App/: App.h  Button.h  ButtonOptionsScene.h
inc/Games/: Actor.h  Ball.h  Block.h  BoundaryEdge.h  BreakOut.h  BreakoutGameLevel.h  Excluder.h  Game.h  Ghost.h  GhostAI.h  LevelBoundary.h  Pacman.h  PacmanGame.h  PacmanGameUtils.h  PacmanLevel.cpp  PacmanLevel.h  PacmanStartScene.h  Paddle.h
inc/Graphics/: AnimatedSprite.h  Animation.h  AnimationPlayer.h  BMPImage.h  BitmapFont.h  Color.h  Screen.h  ScreenBuffer.h  SpriteSheet.h
inc/Input/: GameController.h  InputAction.h  InputController.h
inc/Scenes/: ArcadeScene.h  ButtonOptionsScene.h  GameScene.h  NotImplementedScene.h  PacmanStartScene.h  Scene.h
inc/Shapes/: AARectangle.h  Circle.h  Lines2D.h  Shape.h  Star.h  Stars2D.h  Triangle.h
inc/Utils/: FileCommandLoader.h  Utils.h  Vec2D.h
main/: CMakeLists.txt  main.cpp
src/: ArcadeApp.cpp  BitmapFont.cpp  Blockcpp.cpp  CMakeLists.txt
src/App/: App.cpp  Button.cpp  CMakeLists.txt
src/Games/: Actor.cpp  Ball.cpp  BreakOut.cpp  BreakoutGameLevel.cpp  CMakeLists.txt  Excluder.cpp  Ghost.cpp  GhostAI.cpp  LevelBoundary.cpp  Pacman.cpp  PacmanGame.cpp  PacmanGameUtils.cpp  PacmanLevel.cpp  Paddle.cpp
src/Graphics/: AnimatedSprite.cpp  Animation.cpp  AnimationPlayer.cpp  BMPImage.cpp  BitmapFont.cpp  CMakeLists.txt  Color.cpp  Screen.cpp  ScreenBuffer.cpp  SpriteSheet.cpp
src/Input/: CMakeLists.txt  GameController.cpp  InputAction.cpp  InputController.cpp
src/Scenes/: ArcadeScene.cpp  ButtonOptionsScene.cpp  CMakeLists.txt  GameScene.cpp  NotImplementedScene.cpp  PacmanStartScene.cpp
src/Shapes/: AARectangle.cpp  CMakeLists.txt  Circle.cpp  Lines2D.cpp  Shape.cpp  Star.cpp  Stars2D.cpp  Triangle.cpp
src/Utils/: CMakeLists.txt  FileCommandLoader.cpp  Utils.cpp  Vec2D.cpp
